force-app/main/default/objects/df_122_skuldebrev__c/df_122_skuldebrev__c.object-meta.xml
<CustomObject>
    <label>Skuldebrev</label>
    <nameField>
        <label>Skuldebrev Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skuldebrevs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>