force-app/main/default/objects/df_122_skuldebrev__c/fields/belopp_skuldebrev__c.field-meta.xml
<CustomField>
    <fullName>belopp_skuldebrev__c</fullName>
    <label>Belopp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>