force-app/main/default/objects/df_122_skuldebrev__c/fields/datum_skuldebrev__c.field-meta.xml
<CustomField>
    <fullName>datum_skuldebrev__c</fullName>
    <label>Datum</label>
    <type>DateTime</type>
</CustomField>