force-app/main/default/objects/df_122_skuldebrev__c/fields/efternamn_lngivare__c.field-meta.xml
<CustomField>
    <fullName>efternamn_lngivare__c</fullName>
    <label>Efternamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>