force-app/main/default/objects/df_122_skuldebrev__c/fields/frnamn_lntagare__c.field-meta.xml
<CustomField>
    <fullName>frnamn_lntagare__c</fullName>
    <label>Förnamn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>